parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DASH
    DOLLAR
    DOUBLE_DOTS
    FENCE
    GERUND
    HASH
    HAT
    LINUX_HOME
    L_BRACE
    L_SQUARE_PARENTIS
    MINUS
    NOT
    NULL
    PLUS
    QUESTION_MARK
    R_BRACE
    R_SQUARE_PARENTIS
    SCREAM
    SINGLE_CHAR
    SLASH
    UNDERSCORE

Grammar

Rule 0     S' -> program
Rule 1     program -> select_tree END
Rule 2     program -> program select_tree END
Rule 3     select_tree -> SELECT ARGS FROM_PARSE
Rule 4     select_tree -> SELECT TOP_C FROM_PARSE
Rule 5     select_tree -> SELECT ALL FROM_PARSE
Rule 6     FROM_PARSE -> FROM ARGS
Rule 7     FROM_PARSE -> FROM ARGS ADDITIONAL_CLAUSES
Rule 8     ADDITIONAL_CLAUSES -> JOIN_C ADDITIONAL_CLAUSES
Rule 9     ADDITIONAL_CLAUSES -> WHERE_C ADDITIONAL_CLAUSES
Rule 10    ADDITIONAL_CLAUSES -> GROUP_BY_C ADDITIONAL_CLAUSES
Rule 11    ADDITIONAL_CLAUSES -> HAVING_C ADDITIONAL_CLAUSES
Rule 12    ADDITIONAL_CLAUSES -> ORDER_BY_C ADDITIONAL_CLAUSES
Rule 13    ADDITIONAL_CLAUSES -> LIMIT_C ADDITIONAL_CLAUSES
Rule 14    ADDITIONAL_CLAUSES -> OFFSET_C ADDITIONAL_CLAUSES
Rule 15    ADDITIONAL_CLAUSES -> JOIN_C
Rule 16    ADDITIONAL_CLAUSES -> WHERE_C
Rule 17    ADDITIONAL_CLAUSES -> GROUP_BY_C
Rule 18    ADDITIONAL_CLAUSES -> HAVING_C
Rule 19    ADDITIONAL_CLAUSES -> ORDER_BY_C
Rule 20    ADDITIONAL_CLAUSES -> LIMIT_C
Rule 21    ADDITIONAL_CLAUSES -> OFFSET_C
Rule 22    JOIN_C -> INNER JOIN_C
Rule 23    JOIN_C -> LEFT JOIN_C
Rule 24    JOIN_C -> RIGHT JOIN_C
Rule 25    JOIN_C -> FULL JOIN_C
Rule 26    JOIN_C -> OUTER JOIN_C
Rule 27    JOIN_C -> JOIN ARGS JOIN_C
Rule 28    JOIN_C -> ON VARIABLE
Rule 29    JOIN_C -> ON VARIABLE EQUAL VARIABLE
Rule 30    WHERE_C -> WHERE CONDITION
Rule 31    HAVING_C -> HAVING CONDITION
Rule 32    CONDITION -> VARIABLE OPERATOR MATCH
Rule 33    MATCH -> QUOTE ANY QUOTE
Rule 34    MATCH -> VARIABLE
Rule 35    MATCH -> EMPTY_STRING
Rule 36    GROUP_BY_C -> GROUP BY VARIABLE
Rule 37    INNER_SELECT_C -> L_PARENTIS SELECT ARGS FROM_PARSE R_PARENTIS
Rule 38    ORDER_BY_C -> ORDER BY VARIABLE
Rule 39    ORDER_BY_C -> ORDER BY VARIABLE DESC
Rule 40    ORDER_BY_C -> ORDER BY VARIABLE ASC
Rule 41    ORDER_BY_C -> ORDER BY NEWID_C
Rule 42    LIMIT_C -> LIMIT NUMBER
Rule 43    OFFSET_C -> OFFSET NUMBER
Rule 44    ARGS -> ARGS COMMA VARIABLE
Rule 45    ARGS -> ARGS VARIABLE
Rule 46    ARGS -> DISTINCT VARIABLE
Rule 47    ARGS -> INNER_SELECT_C
Rule 48    ARGS -> VARIABLE
Rule 49    ARGS -> P_COUNT
Rule 50    P_COUNT -> COUNT L_PARENTIS ALL R_PARENTIS
Rule 51    P_COUNT -> COUNT VARIABLE
Rule 52    OPERATOR -> LESS
Rule 53    OPERATOR -> MORE
Rule 54    OPERATOR -> EQUAL
Rule 55    OPERATOR -> NOT_EQUAL
Rule 56    OPERATOR -> MORE_EQ
Rule 57    OPERATOR -> LESS_EQ
Rule 58    OPERATOR -> BETWEEN
Rule 59    OPERATOR -> LIKE
Rule 60    OPERATOR -> IN
Rule 61    OPERATOR -> REGEX
Rule 62    NEWID_C -> NEWID L_PARENTIS R_PARENTIS
Rule 63    TOP_C -> TOP NUMBER ARGS

Terminals, with rules where they appear

ALL                  : 5 50
ANY                  : 33
ASC                  : 40
BETWEEN              : 58
BY                   : 36 38 39 40 41
COMMA                : 44
COUNT                : 50 51
DASH                 : 
DESC                 : 39
DISTINCT             : 46
DOLLAR               : 
DOUBLE_DOTS          : 
EMPTY_STRING         : 35
END                  : 1 2
EQUAL                : 29 54
FENCE                : 
FROM                 : 6 7
FULL                 : 25
GERUND               : 
GROUP                : 36
HASH                 : 
HAT                  : 
HAVING               : 31
IN                   : 60
INNER                : 22
JOIN                 : 27
LEFT                 : 23
LESS                 : 52
LESS_EQ              : 57
LIKE                 : 59
LIMIT                : 42
LINUX_HOME           : 
L_BRACE              : 
L_PARENTIS           : 37 50 62
L_SQUARE_PARENTIS    : 
MINUS                : 
MORE                 : 53
MORE_EQ              : 56
NEWID                : 62
NOT                  : 
NOT_EQUAL            : 55
NULL                 : 
NUMBER               : 42 43 63
OFFSET               : 43
ON                   : 28 29
ORDER                : 38 39 40 41
OUTER                : 26
PLUS                 : 
QUESTION_MARK        : 
QUOTE                : 33 33
REGEX                : 61
RIGHT                : 24
R_BRACE              : 
R_PARENTIS           : 37 50 62
R_SQUARE_PARENTIS    : 
SCREAM               : 
SELECT               : 3 4 5 37
SINGLE_CHAR          : 
SLASH                : 
TOP                  : 63
UNDERSCORE           : 
VARIABLE             : 28 29 29 32 34 36 38 39 40 44 45 46 48 51
WHERE                : 30
error                : 

Nonterminals, with rules where they appear

ADDITIONAL_CLAUSES   : 7 8 9 10 11 12 13 14
ARGS                 : 3 6 7 27 37 44 45 63
CONDITION            : 30 31
FROM_PARSE           : 3 4 5 37
GROUP_BY_C           : 10 17
HAVING_C             : 11 18
INNER_SELECT_C       : 47
JOIN_C               : 8 15 22 23 24 25 26 27
LIMIT_C              : 13 20
MATCH                : 32
NEWID_C              : 41
OFFSET_C             : 14 21
OPERATOR             : 32
ORDER_BY_C           : 12 19
P_COUNT              : 49
TOP_C                : 4
WHERE_C              : 9 16
program              : 2 0
select_tree          : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . select_tree END
    (2) program -> . program select_tree END
    (3) select_tree -> . SELECT ARGS FROM_PARSE
    (4) select_tree -> . SELECT TOP_C FROM_PARSE
    (5) select_tree -> . SELECT ALL FROM_PARSE

    SELECT          shift and go to state 3

    program                        shift and go to state 1
    select_tree                    shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . select_tree END
    (3) select_tree -> . SELECT ARGS FROM_PARSE
    (4) select_tree -> . SELECT TOP_C FROM_PARSE
    (5) select_tree -> . SELECT ALL FROM_PARSE

    SELECT          shift and go to state 3

    select_tree                    shift and go to state 4

state 2

    (1) program -> select_tree . END

    END             shift and go to state 5


state 3

    (3) select_tree -> SELECT . ARGS FROM_PARSE
    (4) select_tree -> SELECT . TOP_C FROM_PARSE
    (5) select_tree -> SELECT . ALL FROM_PARSE
    (44) ARGS -> . ARGS COMMA VARIABLE
    (45) ARGS -> . ARGS VARIABLE
    (46) ARGS -> . DISTINCT VARIABLE
    (47) ARGS -> . INNER_SELECT_C
    (48) ARGS -> . VARIABLE
    (49) ARGS -> . P_COUNT
    (63) TOP_C -> . TOP NUMBER ARGS
    (37) INNER_SELECT_C -> . L_PARENTIS SELECT ARGS FROM_PARSE R_PARENTIS
    (50) P_COUNT -> . COUNT L_PARENTIS ALL R_PARENTIS
    (51) P_COUNT -> . COUNT VARIABLE

    ALL             shift and go to state 8
    DISTINCT        shift and go to state 10
    VARIABLE        shift and go to state 9
    TOP             shift and go to state 13
    L_PARENTIS      shift and go to state 14
    COUNT           shift and go to state 15

    ARGS                           shift and go to state 6
    TOP_C                          shift and go to state 7
    INNER_SELECT_C                 shift and go to state 11
    P_COUNT                        shift and go to state 12

state 4

    (2) program -> program select_tree . END

    END             shift and go to state 16


state 5

    (1) program -> select_tree END .

    SELECT          reduce using rule 1 (program -> select_tree END .)
    $end            reduce using rule 1 (program -> select_tree END .)


state 6

    (3) select_tree -> SELECT ARGS . FROM_PARSE
    (44) ARGS -> ARGS . COMMA VARIABLE
    (45) ARGS -> ARGS . VARIABLE
    (6) FROM_PARSE -> . FROM ARGS
    (7) FROM_PARSE -> . FROM ARGS ADDITIONAL_CLAUSES

    COMMA           shift and go to state 18
    VARIABLE        shift and go to state 19
    FROM            shift and go to state 20

    FROM_PARSE                     shift and go to state 17

state 7

    (4) select_tree -> SELECT TOP_C . FROM_PARSE
    (6) FROM_PARSE -> . FROM ARGS
    (7) FROM_PARSE -> . FROM ARGS ADDITIONAL_CLAUSES

    FROM            shift and go to state 20

    FROM_PARSE                     shift and go to state 21

state 8

    (5) select_tree -> SELECT ALL . FROM_PARSE
    (6) FROM_PARSE -> . FROM ARGS
    (7) FROM_PARSE -> . FROM ARGS ADDITIONAL_CLAUSES

    FROM            shift and go to state 20

    FROM_PARSE                     shift and go to state 22

state 9

    (48) ARGS -> VARIABLE .

    COMMA           reduce using rule 48 (ARGS -> VARIABLE .)
    VARIABLE        reduce using rule 48 (ARGS -> VARIABLE .)
    FROM            reduce using rule 48 (ARGS -> VARIABLE .)
    INNER           reduce using rule 48 (ARGS -> VARIABLE .)
    LEFT            reduce using rule 48 (ARGS -> VARIABLE .)
    RIGHT           reduce using rule 48 (ARGS -> VARIABLE .)
    FULL            reduce using rule 48 (ARGS -> VARIABLE .)
    OUTER           reduce using rule 48 (ARGS -> VARIABLE .)
    JOIN            reduce using rule 48 (ARGS -> VARIABLE .)
    ON              reduce using rule 48 (ARGS -> VARIABLE .)
    WHERE           reduce using rule 48 (ARGS -> VARIABLE .)
    GROUP           reduce using rule 48 (ARGS -> VARIABLE .)
    HAVING          reduce using rule 48 (ARGS -> VARIABLE .)
    ORDER           reduce using rule 48 (ARGS -> VARIABLE .)
    LIMIT           reduce using rule 48 (ARGS -> VARIABLE .)
    OFFSET          reduce using rule 48 (ARGS -> VARIABLE .)
    END             reduce using rule 48 (ARGS -> VARIABLE .)
    R_PARENTIS      reduce using rule 48 (ARGS -> VARIABLE .)


state 10

    (46) ARGS -> DISTINCT . VARIABLE

    VARIABLE        shift and go to state 23


state 11

    (47) ARGS -> INNER_SELECT_C .

    COMMA           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    VARIABLE        reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    FROM            reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    INNER           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    LEFT            reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    RIGHT           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    FULL            reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    OUTER           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    JOIN            reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    ON              reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    WHERE           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    GROUP           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    HAVING          reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    ORDER           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    LIMIT           reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    OFFSET          reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    END             reduce using rule 47 (ARGS -> INNER_SELECT_C .)
    R_PARENTIS      reduce using rule 47 (ARGS -> INNER_SELECT_C .)


state 12

    (49) ARGS -> P_COUNT .

    COMMA           reduce using rule 49 (ARGS -> P_COUNT .)
    VARIABLE        reduce using rule 49 (ARGS -> P_COUNT .)
    FROM            reduce using rule 49 (ARGS -> P_COUNT .)
    INNER           reduce using rule 49 (ARGS -> P_COUNT .)
    LEFT            reduce using rule 49 (ARGS -> P_COUNT .)
    RIGHT           reduce using rule 49 (ARGS -> P_COUNT .)
    FULL            reduce using rule 49 (ARGS -> P_COUNT .)
    OUTER           reduce using rule 49 (ARGS -> P_COUNT .)
    JOIN            reduce using rule 49 (ARGS -> P_COUNT .)
    ON              reduce using rule 49 (ARGS -> P_COUNT .)
    WHERE           reduce using rule 49 (ARGS -> P_COUNT .)
    GROUP           reduce using rule 49 (ARGS -> P_COUNT .)
    HAVING          reduce using rule 49 (ARGS -> P_COUNT .)
    ORDER           reduce using rule 49 (ARGS -> P_COUNT .)
    LIMIT           reduce using rule 49 (ARGS -> P_COUNT .)
    OFFSET          reduce using rule 49 (ARGS -> P_COUNT .)
    END             reduce using rule 49 (ARGS -> P_COUNT .)
    R_PARENTIS      reduce using rule 49 (ARGS -> P_COUNT .)


state 13

    (63) TOP_C -> TOP . NUMBER ARGS

    NUMBER          shift and go to state 24


state 14

    (37) INNER_SELECT_C -> L_PARENTIS . SELECT ARGS FROM_PARSE R_PARENTIS

    SELECT          shift and go to state 25


state 15

    (50) P_COUNT -> COUNT . L_PARENTIS ALL R_PARENTIS
    (51) P_COUNT -> COUNT . VARIABLE

    L_PARENTIS      shift and go to state 26
    VARIABLE        shift and go to state 27


state 16

    (2) program -> program select_tree END .

    SELECT          reduce using rule 2 (program -> program select_tree END .)
    $end            reduce using rule 2 (program -> program select_tree END .)


state 17

    (3) select_tree -> SELECT ARGS FROM_PARSE .

    END             reduce using rule 3 (select_tree -> SELECT ARGS FROM_PARSE .)


state 18

    (44) ARGS -> ARGS COMMA . VARIABLE

    VARIABLE        shift and go to state 28


state 19

    (45) ARGS -> ARGS VARIABLE .

    COMMA           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    VARIABLE        reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    FROM            reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    INNER           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    LEFT            reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    RIGHT           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    FULL            reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    OUTER           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    JOIN            reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    ON              reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    WHERE           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    GROUP           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    HAVING          reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    ORDER           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    LIMIT           reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    OFFSET          reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    END             reduce using rule 45 (ARGS -> ARGS VARIABLE .)
    R_PARENTIS      reduce using rule 45 (ARGS -> ARGS VARIABLE .)


state 20

    (6) FROM_PARSE -> FROM . ARGS
    (7) FROM_PARSE -> FROM . ARGS ADDITIONAL_CLAUSES
    (44) ARGS -> . ARGS COMMA VARIABLE
    (45) ARGS -> . ARGS VARIABLE
    (46) ARGS -> . DISTINCT VARIABLE
    (47) ARGS -> . INNER_SELECT_C
    (48) ARGS -> . VARIABLE
    (49) ARGS -> . P_COUNT
    (37) INNER_SELECT_C -> . L_PARENTIS SELECT ARGS FROM_PARSE R_PARENTIS
    (50) P_COUNT -> . COUNT L_PARENTIS ALL R_PARENTIS
    (51) P_COUNT -> . COUNT VARIABLE

    DISTINCT        shift and go to state 10
    VARIABLE        shift and go to state 9
    L_PARENTIS      shift and go to state 14
    COUNT           shift and go to state 15

    ARGS                           shift and go to state 29
    INNER_SELECT_C                 shift and go to state 11
    P_COUNT                        shift and go to state 12

state 21

    (4) select_tree -> SELECT TOP_C FROM_PARSE .

    END             reduce using rule 4 (select_tree -> SELECT TOP_C FROM_PARSE .)


state 22

    (5) select_tree -> SELECT ALL FROM_PARSE .

    END             reduce using rule 5 (select_tree -> SELECT ALL FROM_PARSE .)


state 23

    (46) ARGS -> DISTINCT VARIABLE .

    COMMA           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    VARIABLE        reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    FROM            reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    INNER           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    LEFT            reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    RIGHT           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    FULL            reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    OUTER           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    JOIN            reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    ON              reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    WHERE           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    GROUP           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    HAVING          reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    ORDER           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    LIMIT           reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    OFFSET          reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    END             reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)
    R_PARENTIS      reduce using rule 46 (ARGS -> DISTINCT VARIABLE .)


state 24

    (63) TOP_C -> TOP NUMBER . ARGS
    (44) ARGS -> . ARGS COMMA VARIABLE
    (45) ARGS -> . ARGS VARIABLE
    (46) ARGS -> . DISTINCT VARIABLE
    (47) ARGS -> . INNER_SELECT_C
    (48) ARGS -> . VARIABLE
    (49) ARGS -> . P_COUNT
    (37) INNER_SELECT_C -> . L_PARENTIS SELECT ARGS FROM_PARSE R_PARENTIS
    (50) P_COUNT -> . COUNT L_PARENTIS ALL R_PARENTIS
    (51) P_COUNT -> . COUNT VARIABLE

    DISTINCT        shift and go to state 10
    VARIABLE        shift and go to state 9
    L_PARENTIS      shift and go to state 14
    COUNT           shift and go to state 15

    ARGS                           shift and go to state 30
    INNER_SELECT_C                 shift and go to state 11
    P_COUNT                        shift and go to state 12

state 25

    (37) INNER_SELECT_C -> L_PARENTIS SELECT . ARGS FROM_PARSE R_PARENTIS
    (44) ARGS -> . ARGS COMMA VARIABLE
    (45) ARGS -> . ARGS VARIABLE
    (46) ARGS -> . DISTINCT VARIABLE
    (47) ARGS -> . INNER_SELECT_C
    (48) ARGS -> . VARIABLE
    (49) ARGS -> . P_COUNT
    (37) INNER_SELECT_C -> . L_PARENTIS SELECT ARGS FROM_PARSE R_PARENTIS
    (50) P_COUNT -> . COUNT L_PARENTIS ALL R_PARENTIS
    (51) P_COUNT -> . COUNT VARIABLE

    DISTINCT        shift and go to state 10
    VARIABLE        shift and go to state 9
    L_PARENTIS      shift and go to state 14
    COUNT           shift and go to state 15

    ARGS                           shift and go to state 31
    INNER_SELECT_C                 shift and go to state 11
    P_COUNT                        shift and go to state 12

state 26

    (50) P_COUNT -> COUNT L_PARENTIS . ALL R_PARENTIS

    ALL             shift and go to state 32


state 27

    (51) P_COUNT -> COUNT VARIABLE .

    COMMA           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    VARIABLE        reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    FROM            reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    INNER           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    LEFT            reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    RIGHT           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    FULL            reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    OUTER           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    JOIN            reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    ON              reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    WHERE           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    GROUP           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    HAVING          reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    ORDER           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    LIMIT           reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    OFFSET          reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    END             reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)
    R_PARENTIS      reduce using rule 51 (P_COUNT -> COUNT VARIABLE .)


state 28

    (44) ARGS -> ARGS COMMA VARIABLE .

    COMMA           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    VARIABLE        reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    FROM            reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    INNER           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    LEFT            reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    RIGHT           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    FULL            reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    OUTER           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    JOIN            reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    ON              reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    WHERE           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    GROUP           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    HAVING          reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    ORDER           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    LIMIT           reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    OFFSET          reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    END             reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)
    R_PARENTIS      reduce using rule 44 (ARGS -> ARGS COMMA VARIABLE .)


state 29

    (6) FROM_PARSE -> FROM ARGS .
    (7) FROM_PARSE -> FROM ARGS . ADDITIONAL_CLAUSES
    (44) ARGS -> ARGS . COMMA VARIABLE
    (45) ARGS -> ARGS . VARIABLE
    (8) ADDITIONAL_CLAUSES -> . JOIN_C ADDITIONAL_CLAUSES
    (9) ADDITIONAL_CLAUSES -> . WHERE_C ADDITIONAL_CLAUSES
    (10) ADDITIONAL_CLAUSES -> . GROUP_BY_C ADDITIONAL_CLAUSES
    (11) ADDITIONAL_CLAUSES -> . HAVING_C ADDITIONAL_CLAUSES
    (12) ADDITIONAL_CLAUSES -> . ORDER_BY_C ADDITIONAL_CLAUSES
    (13) ADDITIONAL_CLAUSES -> . LIMIT_C ADDITIONAL_CLAUSES
    (14) ADDITIONAL_CLAUSES -> . OFFSET_C ADDITIONAL_CLAUSES
    (15) ADDITIONAL_CLAUSES -> . JOIN_C
    (16) ADDITIONAL_CLAUSES -> . WHERE_C
    (17) ADDITIONAL_CLAUSES -> . GROUP_BY_C
    (18) ADDITIONAL_CLAUSES -> . HAVING_C
    (19) ADDITIONAL_CLAUSES -> . ORDER_BY_C
    (20) ADDITIONAL_CLAUSES -> . LIMIT_C
    (21) ADDITIONAL_CLAUSES -> . OFFSET_C
    (22) JOIN_C -> . INNER JOIN_C
    (23) JOIN_C -> . LEFT JOIN_C
    (24) JOIN_C -> . RIGHT JOIN_C
    (25) JOIN_C -> . FULL JOIN_C
    (26) JOIN_C -> . OUTER JOIN_C
    (27) JOIN_C -> . JOIN ARGS JOIN_C
    (28) JOIN_C -> . ON VARIABLE
    (29) JOIN_C -> . ON VARIABLE EQUAL VARIABLE
    (30) WHERE_C -> . WHERE CONDITION
    (36) GROUP_BY_C -> . GROUP BY VARIABLE
    (31) HAVING_C -> . HAVING CONDITION
    (38) ORDER_BY_C -> . ORDER BY VARIABLE
    (39) ORDER_BY_C -> . ORDER BY VARIABLE DESC
    (40) ORDER_BY_C -> . ORDER BY VARIABLE ASC
    (41) ORDER_BY_C -> . ORDER BY NEWID_C
    (42) LIMIT_C -> . LIMIT NUMBER
    (43) OFFSET_C -> . OFFSET NUMBER

    END             reduce using rule 6 (FROM_PARSE -> FROM ARGS .)
    R_PARENTIS      reduce using rule 6 (FROM_PARSE -> FROM ARGS .)
    COMMA           shift and go to state 18
    VARIABLE        shift and go to state 19
    INNER           shift and go to state 41
    LEFT            shift and go to state 42
    RIGHT           shift and go to state 43
    FULL            shift and go to state 44
    OUTER           shift and go to state 45
    JOIN            shift and go to state 46
    ON              shift and go to state 47
    WHERE           shift and go to state 48
    GROUP           shift and go to state 49
    HAVING          shift and go to state 50
    ORDER           shift and go to state 51
    LIMIT           shift and go to state 52
    OFFSET          shift and go to state 53

    ADDITIONAL_CLAUSES             shift and go to state 33
    JOIN_C                         shift and go to state 34
    WHERE_C                        shift and go to state 35
    GROUP_BY_C                     shift and go to state 36
    HAVING_C                       shift and go to state 37
    ORDER_BY_C                     shift and go to state 38
    LIMIT_C                        shift and go to state 39
    OFFSET_C                       shift and go to state 40

state 30

    (63) TOP_C -> TOP NUMBER ARGS .
    (44) ARGS -> ARGS . COMMA VARIABLE
    (45) ARGS -> ARGS . VARIABLE

    FROM            reduce using rule 63 (TOP_C -> TOP NUMBER ARGS .)
    COMMA           shift and go to state 18
    VARIABLE        shift and go to state 19


state 31

    (37) INNER_SELECT_C -> L_PARENTIS SELECT ARGS . FROM_PARSE R_PARENTIS
    (44) ARGS -> ARGS . COMMA VARIABLE
    (45) ARGS -> ARGS . VARIABLE
    (6) FROM_PARSE -> . FROM ARGS
    (7) FROM_PARSE -> . FROM ARGS ADDITIONAL_CLAUSES

    COMMA           shift and go to state 18
    VARIABLE        shift and go to state 19
    FROM            shift and go to state 20

    FROM_PARSE                     shift and go to state 54

state 32

    (50) P_COUNT -> COUNT L_PARENTIS ALL . R_PARENTIS

    R_PARENTIS      shift and go to state 55


state 33

    (7) FROM_PARSE -> FROM ARGS ADDITIONAL_CLAUSES .

    END             reduce using rule 7 (FROM_PARSE -> FROM ARGS ADDITIONAL_CLAUSES .)
    R_PARENTIS      reduce using rule 7 (FROM_PARSE -> FROM ARGS ADDITIONAL_CLAUSES .)


state 34

    (8) ADDITIONAL_CLAUSES -> JOIN_C . ADDITIONAL_CLAUSES
    (15) ADDITIONAL_CLAUSES -> JOIN_C .
    (8) ADDITIONAL_CLAUSES -> . JOIN_C ADDITIONAL_CLAUSES
    (9) ADDITIONAL_CLAUSES -> . WHERE_C ADDITIONAL_CLAUSES
    (10) ADDITIONAL_CLAUSES -> . GROUP_BY_C ADDITIONAL_CLAUSES
    (11) ADDITIONAL_CLAUSES -> . HAVING_C ADDITIONAL_CLAUSES
    (12) ADDITIONAL_CLAUSES -> . ORDER_BY_C ADDITIONAL_CLAUSES
    (13) ADDITIONAL_CLAUSES -> . LIMIT_C ADDITIONAL_CLAUSES
    (14) ADDITIONAL_CLAUSES -> . OFFSET_C ADDITIONAL_CLAUSES
    (15) ADDITIONAL_CLAUSES -> . JOIN_C
    (16) ADDITIONAL_CLAUSES -> . WHERE_C
    (17) ADDITIONAL_CLAUSES -> . GROUP_BY_C
    (18) ADDITIONAL_CLAUSES -> . HAVING_C
    (19) ADDITIONAL_CLAUSES -> . ORDER_BY_C
    (20) ADDITIONAL_CLAUSES -> . LIMIT_C
    (21) ADDITIONAL_CLAUSES -> . OFFSET_C
    (22) JOIN_C -> . INNER JOIN_C
    (23) JOIN_C -> . LEFT JOIN_C
    (24) JOIN_C -> . RIGHT JOIN_C
    (25) JOIN_C -> . FULL JOIN_C
    (26) JOIN_C -> . OUTER JOIN_C
    (27) JOIN_C -> . JOIN ARGS JOIN_C
    (28) JOIN_C -> . ON VARIABLE
    (29) JOIN_C -> . ON VARIABLE EQUAL VARIABLE
    (30) WHERE_C -> . WHERE CONDITION
    (36) GROUP_BY_C -> . GROUP BY VARIABLE
    (31) HAVING_C -> . HAVING CONDITION
    (38) ORDER_BY_C -> . ORDER BY VARIABLE
    (39) ORDER_BY_C -> . ORDER BY VARIABLE DESC
    (40) ORDER_BY_C -> . ORDER BY VARIABLE ASC
    (41) ORDER_BY_C -> . ORDER BY NEWID_C
    (42) LIMIT_C -> . LIMIT NUMBER
    (43) OFFSET_C -> . OFFSET NUMBER

    END             reduce using rule 15 (ADDITIONAL_CLAUSES -> JOIN_C .)
    R_PARENTIS      reduce using rule 15 (ADDITIONAL_CLAUSES -> JOIN_C .)
    INNER           shift and go to state 41
    LEFT            shift and go to state 42
    RIGHT           shift and go to state 43
    FULL            shift and go to state 44
    OUTER           shift and go to state 45
    JOIN            shift and go to state 46
    ON              shift and go to state 47
    WHERE           shift and go to state 48
    GROUP           shift and go to state 49
    HAVING          shift and go to state 50
    ORDER           shift and go to state 51
    LIMIT           shift and go to state 52
    OFFSET          shift and go to state 53
